mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_snv_ttn_transcript_picking_reporting@2-179631246-G-A-false-true.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: A
  consequences:
    - stop_gained
  putative_impact: high
  gene_symbol: TTN
  gene_id: "HGNC:12403"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_001256850.1
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 41
    total: 313
  hgvs_g: g.179631246G>A
  hgvs_n: n.9790C>T
  hgvs_c: c.9565C>T
  hgvs_p: p.Gln3189Ter
  cdna_pos:
    ord: 9790
    total: 104301
  cds_pos:
    ord: 9565
    total: 103053
  protein_pos:
    ord: 3189
    total: 34350
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: A
  consequences:
    - stop_gained
  putative_impact: high
  gene_symbol: TTN
  gene_id: "HGNC:12403"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_001267550.2
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 41
    total: 363
  hgvs_g: g.179631246G>A
  hgvs_n: n.9790C>T
  hgvs_c: c.9565C>T
  hgvs_p: p.Gln3189Ter
  cdna_pos:
    ord: 9790
    total: 109224
  cds_pos:
    ord: 9565
    total: 107976
  protein_pos:
    ord: 3189
    total: 35991
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: A
  consequences:
    - stop_gained
  putative_impact: high
  gene_symbol: TTN
  gene_id: "HGNC:12403"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_003319.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 40
    total: 191
  hgvs_g: g.179631246G>A
  hgvs_n: n.9652C>T
  hgvs_c: c.9427C>T
  hgvs_p: p.Gln3143Ter
  cdna_pos:
    ord: 9652
    total: 82029
  cds_pos:
    ord: 9427
    total: 80781
  protein_pos:
    ord: 3143
    total: 26926
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: A
  consequences:
    - stop_gained
  putative_impact: high
  gene_symbol: TTN
  gene_id: "HGNC:12403"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_133378.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 41
    total: 312
  hgvs_g: g.179631246G>A
  hgvs_n: n.9790C>T
  hgvs_c: c.9565C>T
  hgvs_p: p.Gln3189Ter
  cdna_pos:
    ord: 9790
    total: 101520
  cds_pos:
    ord: 9565
    total: 100272
  protein_pos:
    ord: 3189
    total: 33423
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: A
  consequences:
    - stop_gained
  putative_impact: high
  gene_symbol: TTN
  gene_id: "HGNC:12403"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_133379.5
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 41
    total: 46
  hgvs_g: g.179631246G>A
  hgvs_n: n.9790C>T
  hgvs_c: c.9565C>T
  hgvs_p: p.Gln3189Ter
  cdna_pos:
    ord: 9790
    total: 18220
  cds_pos:
    ord: 9565
    total: 16815
  protein_pos:
    ord: 3189
    total: 5604
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: A
  consequences:
    - stop_gained
  putative_impact: high
  gene_symbol: TTN
  gene_id: "HGNC:12403"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_133432.3
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 40
    total: 192
  hgvs_g: g.179631246G>A
  hgvs_n: n.9652C>T
  hgvs_c: c.9427C>T
  hgvs_p: p.Gln3143Ter
  cdna_pos:
    ord: 9652
    total: 82404
  cds_pos:
    ord: 9427
    total: 81156
  protein_pos:
    ord: 3143
    total: 27051
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: A
  consequences:
    - stop_gained
  putative_impact: high
  gene_symbol: TTN
  gene_id: "HGNC:12403"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_133437.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 40
    total: 192
  hgvs_g: g.179631246G>A
  hgvs_n: n.9652C>T
  hgvs_c: c.9427C>T
  hgvs_p: p.Gln3143Ter
  cdna_pos:
    ord: 9652
    total: 82605
  cds_pos:
    ord: 9427
    total: 81357
  protein_pos:
    ord: 3143
    total: 27118
  distance: 0
  strand: -1
  messages: ~
